--- a/AlgoTrader/App.config
+++ b/AlgoTrader/App.config
@@ -20,12 +20,20 @@
         <binding name="WSHttpBinding_IUserAgent">
           <security mode="None" />
         </binding>
+        <binding name="WSHttpBinding_IPortfolioManager" />
       </wsHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://localhost:1244/services/useragent/UserAgent.svc"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUserAgent"
         contract="useragent.Client.IUserAgent" name="WSHttpBinding_IUserAgent" />
+      <endpoint address="http://localhost:1244/services/portfolio/PortfolioManager.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPortfolioManager"
+        contract="portfolio.Client.IPortfolioManager" name="WSHttpBinding_IPortfolioManager">
+        <identity>
+          <userPrincipalName value="wintermute\briguy" />
+        </identity>
+      </endpoint>
     </client>
   </system.serviceModel>
 </configuration>
