switched up the integration with strategy service

--- a/AlgoTrader/App.config
+++ b/AlgoTrader/App.config
@@ -15,25 +15,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <system.serviceModel>
-    <bindings>
-      <wsHttpBinding>
-        <binding name="WSHttpBinding_IUserAgent">
-          <security mode="None" />
-        </binding>
-        <binding name="WSHttpBinding_IPortfolioManager" />
-      </wsHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="http://localhost:1244/services/useragent/UserAgent.svc"
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUserAgent"
-        contract="useragent.Client.IUserAgent" name="WSHttpBinding_IUserAgent" />
-      <endpoint address="http://localhost:1244/services/portfolio/PortfolioManager.svc"
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPortfolioManager"
-        contract="portfolio.Client.IPortfolioManager" name="WSHttpBinding_IPortfolioManager">
-        <identity>
-          <userPrincipalName value="wintermute\briguy" />
-        </identity>
-      </endpoint>
-    </client>
+    <bindings />
+    <client />
   </system.serviceModel>
 </configuration>
