--- a/AlgoTrader/AlgoTrader.csproj
+++ b/AlgoTrader/AlgoTrader.csproj
@@ -66,8 +66,10 @@
     <Compile Include="datamodel\TraderContextInitializer.cs" />
     <Compile Include="datamodel\WatchList.cs" />
     <Compile Include="datamodel\WatchListItem.cs" />
+    <Compile Include="Email\EmailSender.cs" />
     <Compile Include="interfaces\ArgumentExceptionFault.cs" />
     <Compile Include="interfaces\IAlert.cs" />
+    <Compile Include="interfaces\IEmail.cs" />
     <Compile Include="interfaces\IPortfolio.cs" />
     <Compile Include="interfaces\IWatchListManager.cs" />
     <Compile Include="interfaces\IUserAgent.cs" />
