parabolic SAR tested but not integrated with strategy

--- a/AlgoTrader.NUnit/AlgoTrader.NUnit.csproj
+++ b/AlgoTrader.NUnit/AlgoTrader.NUnit.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ParabolicSarMetricTest.cs" />
     <Compile Include="PortfolioRuleTests.cs" />
     <Compile Include="TradeTests.cs" />
     <Compile Include="WatchListTest.cs" />
