--- a/AlgoTraderSite/AlgoTraderSite.csproj
+++ b/AlgoTraderSite/AlgoTraderSite.csproj
@@ -199,6 +199,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="Settings.aspx" />
     <Content Include="Portfolio.aspx" />
     <Content Include="Scripts\AlgoTrader\AlgoTrader.js" />
     <Content Include="Service References\UserAgent.Client\AlgoTraderSite.UserAgent.Client.AlertMessage.datasource">
@@ -356,6 +357,13 @@
     </Compile>
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Settings.aspx.cs">
+      <DependentUpon>Settings.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Settings.aspx.designer.cs">
+      <DependentUpon>Settings.aspx</DependentUpon>
     </Compile>
     <Compile Include="Portfolio.aspx.cs">
       <DependentUpon>Portfolio.aspx</DependentUpon>
