--- a/AlgoTraderSite/Web.config
+++ b/AlgoTraderSite/Web.config
@@ -92,6 +92,7 @@
         <binding name="WSHttpBinding_IUserAgent">
           <security mode="None" />
         </binding>
+        <binding name="WSHttpBinding_IStrategy" />
       </wsHttpBinding>
     </bindings>
     <client>
@@ -105,6 +106,13 @@
       <endpoint address="http://localhost:1244/services/useragent/UserAgent.svc"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IUserAgent"
         contract="UserAgent.Client.IUserAgent" name="WSHttpBinding_IUserAgent" />
+      <endpoint address="http://localhost:8000/AlgoTrader/services/ATStrategySvc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IStrategy"
+        contract="Strategy.Client.IStrategy" name="WSHttpBinding_IStrategy">
+        <identity>
+          <servicePrincipalName value="host/wintermute" />
+        </identity>
+      </endpoint>
     </client>
     <services>
       <service name="AlgoTrader.portfolio.PortfolioManager" behaviorConfiguration="PortfolioManagerBehavior">
