updated strategy client to include detail

--- a/ATStrategySvc/App.config
+++ b/ATStrategySvc/App.config
@@ -12,7 +12,16 @@
     <add name="AlgoTraderDb" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=AlgoTraderDb;Trusted_Connection=True;"/>
   </connectionStrings>
   <system.serviceModel>
-    <bindings />
+    <bindings>
+      <wsHttpBinding>
+        <binding name="strategyHttpBinding">
+          <security mode="None">
+            <transport clientCredentialType="None"/>
+            <message establishSecurityContext="false"/>
+          </security>
+        </binding>
+      </wsHttpBinding>
+    </bindings>
     <client />
     <services>
       <service name="AlgoTrader.strategy.ThreeDucksStrategy" behaviorConfiguration="ATStrategySvcBehavior">
@@ -21,7 +30,7 @@
             <add baseAddress="http://localhost:8000/AlgoTrader/services/ATStrategySvc" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="wsHttpBinding" contract="AlgoTrader.Interfaces.IStrategy" />
+        <endpoint address="" binding="wsHttpBinding" contract="AlgoTrader.Interfaces.IStrategy" bindingConfiguration="strategyHttpBinding" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
     </services>
