--- a/AlgoTraderSite/Web.config
+++ b/AlgoTraderSite/Web.config
@@ -81,6 +81,14 @@
   </entityFramework>
   <system.serviceModel>
     <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IStrategy">
+          <security mode="None">
+            <transport clientCredentialType="None" />
+            <message clientCredentialType="UserName" />
+          </security>
+        </binding>
+      </basicHttpBinding>
       <wsHttpBinding>
         <binding name="WSHttpBinding_UserAgent">
           <security mode="None">
@@ -92,7 +100,10 @@
         <binding name="WSHttpBinding_IUserAgent">
           <security mode="None" />
         </binding>
-        <binding name="WSHttpBinding_IStrategy" />
+        <binding name="WSHttpBinding_IStrategy">
+          <security mode="None" />
+        </binding>
+
       </wsHttpBinding>
     </bindings>
     <client>
@@ -108,11 +119,7 @@
         contract="UserAgent.Client.IUserAgent" name="WSHttpBinding_IUserAgent" />
       <endpoint address="http://localhost:8000/AlgoTrader/services/ATStrategySvc"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IStrategy"
-        contract="Strategy.Client.IStrategy" name="WSHttpBinding_IStrategy">
-        <identity>
-          <servicePrincipalName value="host/wintermute" />
-        </identity>
-      </endpoint>
+        contract="Strategy.Client.IStrategy" name="WSHttpBinding_IStrategy" />
     </client>
     <services>
       <service name="AlgoTrader.portfolio.PortfolioManager" behaviorConfiguration="PortfolioManagerBehavior">
