--- a/AlgoTrader/AlgoTrader.csproj
+++ b/AlgoTrader/AlgoTrader.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="datamodel\Alert.cs" />
+    <Compile Include="datamodel\EmailLog.cs" />
     <Compile Include="datamodel\Portfolio.cs" />
     <Compile Include="datamodel\Position.cs" />
     <Compile Include="datamodel\Quote.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="interfaces\ArgumentExceptionFault.cs" />
     <Compile Include="interfaces\IAlert.cs" />
     <Compile Include="interfaces\IEmail.cs" />
+    <Compile Include="interfaces\IEmailLog.cs" />
     <Compile Include="interfaces\IPortfolio.cs" />
     <Compile Include="interfaces\IWatchListManager.cs" />
     <Compile Include="interfaces\IUserAgent.cs" />
@@ -103,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="datamodel\db_scripts\AlgoTraderDb.sql" />
+    <Content Include="datamodel\db_scripts\EmailLog.sql" />
     <Content Include="datamodel\db_scripts\Portfolios.sql" />
     <Content Include="datamodel\db_scripts\Positions.sql" />
     <Content Include="datamodel\db_scripts\Quotes.sql" />
