--- a/AlgoTrader/App.config
+++ b/AlgoTrader/App.config
@@ -3,6 +3,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="AlgoTrader.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -18,4 +21,11 @@
     <bindings />
     <client />
   </system.serviceModel>
+  <applicationSettings>
+    <AlgoTrader.Properties.Settings>
+      <setting name="AlgoTrader_StockService_StockQuote" serializeAs="String">
+        <value>http://www.webservicex.net/stockquote.asmx</value>
+      </setting>
+    </AlgoTrader.Properties.Settings>
+  </applicationSettings>
 </configuration>
