Changed to add the proper DB name

--- a/ATQouteMngrUpdate/App.config
+++ b/ATQouteMngrUpdate/App.config
@@ -6,8 +6,7 @@
     </sectionGroup>
   </configSections>
   <appSettings>
-    <add key="ConnString" value="Server=localhosts;Database=AlgTrader;Trusted_Connection=True;"/>
-    
+    <add key="ConnString" value="Server=localhosts;Database=AlgoTraderDB;Trusted_Connection=True;"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
