error logging in GetPosition()

--- a/AlgoTraderSite/Web.config
+++ b/AlgoTraderSite/Web.config
@@ -150,8 +150,8 @@
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <log4net>
-    <appender name="UserAgentAppender" type="log4net.Appender.FileAppender">
-      <file value="UserAgentWeb.log" />
+    <appender name="AlgoTraderSiteAppender" type="log4net.Appender.FileAppender">
+      <file value="AlgoTraderSite.log" />
       <appendToFile value="true" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
@@ -160,7 +160,7 @@
     </appender>
     <root>
       <level value="DEBUG" />
-      <appender-ref ref="UserAgentAppender" />
+      <appender-ref ref="AlgoTraderSiteAppender" />
     </root>
   </log4net>
 </configuration>
