--- a/ATQouteMngrUpdate/App.config
+++ b/ATQouteMngrUpdate/App.config
@@ -7,6 +7,7 @@
   </configSections>
   <appSettings>
     <add key="ConnString" value="Server=localhost;Database=AlgoTraderDB;Trusted_Connection=True;"/>
+    <add key="ErrorPath" value="UpdateErrors"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
