Made changes to the email reader and settings that will help solve some errors.

--- a/ATEmailReader/App.config
+++ b/ATEmailReader/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <add key="ErrorsPath" value="EmailErrors.log"/>
+  </appSettings>
+  <connectionStrings>
+      <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-AlgoTraderSite-20130610193429;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-AlgoTraderSite-20130610193429.mdf" />
+      <add name="AlgoTraderDb" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=AlgoTraderDb;Trusted_Connection=True;" />
+    </connectionStrings>
 </configuration>
