--- a/ATEmailReader/ATEmailReader.csproj
+++ b/ATEmailReader/ATEmailReader.csproj
@@ -39,6 +39,7 @@
       <HintPath>.\Mail.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
