Comments, tests - commented Watchlist page - commented Portfolio page - moved test/debug stuff to debug folder in website - added some tests

--- a/AlgoTrader.NUnit/AlgoTrader.NUnit.csproj
+++ b/AlgoTrader.NUnit/AlgoTrader.NUnit.csproj
@@ -55,6 +55,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PositionTest.cs" />
+    <Compile Include="QuoteTest.cs" />
+    <Compile Include="WatchListItemTest.cs" />
     <Compile Include="ParabolicSarMetricTest.cs" />
     <Compile Include="PortfolioRuleTests.cs" />
     <Compile Include="TradeTests.cs" />
