--- a/AlgoTraderSite/AlgoTraderSite.csproj
+++ b/AlgoTraderSite/AlgoTraderSite.csproj
@@ -140,7 +140,7 @@
     <Content Include="Account\OpenAuthProviders.ascx" />
     <Content Include="Account\Register.aspx" />
     <Content Include="Account\RegisterExternalLogin.aspx" />
-    <Content Include="Alerts.aspx" />
+    <Content Include="debug\Alerts.aspx" />
     <Content Include="BuySell.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\fonts\algotrader.dev.svg" />
@@ -258,9 +258,9 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </Content>
     <Content Include="services\useragent\UserAgent.svc" />
-    <Content Include="TestStrategyDetail.aspx" />
+    <Content Include="debug\TestStrategyDetail.aspx" />
     <Content Include="Watchlist.aspx" />
-    <Content Include="debug.aspx" />
+    <Content Include="debug\debug.aspx" />
     <Content Include="Images\accent.png" />
     <Content Include="Images\bullet.png" />
     <Content Include="Images\heroAccent.png" />
@@ -351,11 +351,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Alerts.aspx.cs">
+    <Compile Include="debug\Alerts.aspx.cs">
       <DependentUpon>Alerts.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Alerts.aspx.designer.cs">
+    <Compile Include="debug\Alerts.aspx.designer.cs">
       <DependentUpon>Alerts.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -448,11 +448,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="TestStrategyDetail.aspx.cs">
+    <Compile Include="debug\TestStrategyDetail.aspx.cs">
       <DependentUpon>TestStrategyDetail.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="TestStrategyDetail.aspx.designer.cs">
+    <Compile Include="debug\TestStrategyDetail.aspx.designer.cs">
       <DependentUpon>TestStrategyDetail.aspx</DependentUpon>
     </Compile>
     <Compile Include="Watchlist.aspx.cs">
@@ -462,11 +462,11 @@
     <Compile Include="Watchlist.aspx.designer.cs">
       <DependentUpon>Watchlist.aspx</DependentUpon>
     </Compile>
-    <Compile Include="debug.aspx.cs">
+    <Compile Include="debug\debug.aspx.cs">
       <DependentUpon>debug.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="debug.aspx.designer.cs">
+    <Compile Include="debug\debug.aspx.designer.cs">
       <DependentUpon>debug.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
