--- a/AlgoTrader/AlgoTrader.csproj
+++ b/AlgoTrader/AlgoTrader.csproj
@@ -98,8 +98,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="qoute\QouteAsync.cs" />
-    <Compile Include="qoute\QuoteManager.cs" />
+    <Compile Include="quote\QuoteAsync.cs" />
+    <Compile Include="quote\QuoteManager.cs" />
     <Compile Include="strategy\ParabolicSarMetric.cs" />
     <Compile Include="strategy\QuoteProvider.cs" />
     <Compile Include="strategy\SignalAlerter.cs" />
